# minerva-chain

./: .gitignore  Cargo.toml  readme.md
.github/: MILESTONES.md  WEEK2_ISSUES.md
.github/ISSUE_TEMPLATE/: weekly-task.md
benches/: block_execution.rs  replay.rs  storage_append.rs
benches/common/: mod.rs
crates/block/: Cargo.toml
crates/block/src/: block.rs  error.rs  fork_choice.rs  lib.rs  merkle.rs
crates/block/tests/: block.rs  fork_choice.rs  merkle.rs
crates/chain/: Cargo.toml
crates/chain/src/: error.rs  import.rs  lib.rs  startup.rs
crates/chain/tests/: import.rs  restart.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: hash.rs  lib.rs  signature.rs
crates/crypto/tests/: hash.rs
crates/execution/: Cargo.toml
crates/execution/src/: chain_state.rs  error.rs  genesis.rs  lib.rs  replay.rs
crates/execution/tests/: executor.rs  replay.rs
crates/mempool/: Cargo.toml
crates/mempool/src/: error.rs  lib.rs  pool.rs
crates/mempool/tests/: mempool_tests.rs
crates/node/: Cargo.toml  README.md
crates/node/src/: cli.rs  commands.rs  main.rs
crates/primitives/src/: amount.rs  error.rs  hash.rs  ids.rs  lib.rs
crates/primitives/tests/: amount.rs  ids.rs
crates/state/: Cargo.toml
crates/state/src/: account.rs  chain_state.rs  error.rs  lib.rs  snapshot.rs
crates/state/tests/: account.rs  execute_block.rs  executor.rs  snapshot.rs
crates/storage/: Cargo.toml
crates/storage/src/: append_log.rs  error.rs  lib.rs  record.rs  recovery.rs
crates/storage/tests/: append_log.rs  decoder.rs  recovery.rs
crates/storage/tests/common/: mod.rs
crates/transaction/: Cargo.toml
crates/transaction/src/: lib.rs  transaction.rs
crates/transaction/tests/: id.rs  sign.rs  unsigned_transaction.rs  verify.rs
docs/: architecture.md  benchmarks.md  block-validation.md  fee-model.md  fork-choice.md  fuzzing.md  invariants.md  logging.md  replay.md  storage.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: block_decoder.rs  state_transition_input.rs  storage_recovery.rs  transaction_decoder.rs
notes/: day-01-architecture.md  day-02-accounts.md  day-03-solana-transactions.md  day-03-storage-recovery.md  day-05-merkle-root.md  w2d4-execution.md  w2d6-audit.md  w3d1-mempool.md
src/: lib.rs
tests/: property_tests.rs
