[package]
name = "minerva-chain"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
members = [
    "crates/primitives",
    "crates/crypto",
    "crates/state",
    "crates/transaction",
    "crates/block",
    "crates/mempool",
    "crates/storage",
    "crates/chain",
    "crates/execution",
    "crates/node",
]
resolver = "2"

[dev-dependencies]
primitives = { path = "crates/primitives" }
block = { path = "crates/block" }
transaction = { path = "crates/transaction" }
state = { path = "crates/state" }
mempool = { path = "crates/mempool" }
storage = { path = "crates/storage" }
chain = { path = "crates/chain" }
execution = { path = "crates/execution" }
proptest = "1"
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "block_execution"
harness = false

[[bench]]
name = "replay"
harness = false

[[bench]]
name = "storage_append"
harness = false
