[package]
name = "minerva-chain-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
storage = { path = "../crates/storage" }
transaction = { path = "../crates/transaction" }
primitives = { path = "../crates/primitives" }
state = { path = "../crates/state" }
tempfile = "3"

[[bin]]
name = "transaction_decoder"
path = "fuzz_targets/transaction_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "block_decoder"
path = "fuzz_targets/block_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "state_transition_input"
path = "fuzz_targets/state_transition_input.rs"
test = false
doc = false
bench = false

[[bin]]
name = "storage_recovery"
path = "fuzz_targets/storage_recovery.rs"
test = false
doc = false
bench = false

# Detaches this crate from the parent workspace (see Cargo's error:
# "current package believes it's in a workspace when it's not"). Fuzz
# crates conventionally live outside the main workspace: they need
# nightly-only libFuzzer instrumentation the rest of this project doesn't,
# and shouldn't perturb the main workspace's dependency resolution.
[workspace]
