[package]
name = "chain"
version = "0.1.0"
edition = "2024"

[dependencies]
primitives = { path = "../primitives" }
block = { path = "../block" }
state = { path = "../state" }
storage = { path = "../storage" }
execution = { path = "../execution" }
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
transaction = { path = "../transaction" }
tempfile = "3"
